vertically indent postless page headings
affects the messages:
- "This minimalist Tumblr has no posts."
- "No search results for <SearchQuery>"

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -152,6 +152,13 @@ main > h3 {
   text-shadow: 0 0 1px rgb(var(--background));
 }
 
+main > h3:only-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 280px;
+}
+
 main a {
   color: rgb(var(--title));
   text-decoration: underline;
