--- a/Vision Core.css
+++ b/Vision Core.css
@@ -149,13 +149,19 @@ main > h3 {
   text-align: center;
   text-shadow: 0 0 1px rgb(var(--background));
   overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 main > h3:only-child {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 280px;
+  padding: 100px var(--post-padding);
+  border-radius: 3px;
+
+  background-color: rgb(var(--background));
+  background-image: linear-gradient(rgba(var(--title), 0.07), rgba(var(--title), 0.07));
+  color: rgba(var(--title), 0.65);
 }
 
 main a {
