--- a/Vision Core.css
+++ b/Vision Core.css
@@ -422,7 +422,7 @@ article {
   overflow-wrap: break-word;
 }
 
-article:focus {
+article:focus-visible {
   box-shadow: 0 0 10px 1px rgb(var(--accent));
   outline: none;
 }
