--- a/Vision Core.css
+++ b/Vision Core.css
@@ -586,9 +586,22 @@ article.video section.media iframe {
 }
 
 .ask-item > div {
+  position: relative;
+
   padding: var(--post-vertical-spacing) var(--post-padding) 0;
 
   background: rgba(var(--title), 0.07);
+}
+
+.ask-item > div::before {
+  position: absolute;
+  right: -16px;
+  top: 12px;
+
+  border: 8px solid transparent;
+  border-left-color: rgba(var(--title), 0.07);
+
+  content: "";
 }
 
 .ask-item .user {
