add badges to notifications
closes #9

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -1069,6 +1069,33 @@ li.note span.notes_loading {
   user-select: none;
 }
 
+li.note .avatar_frame {
+  position: relative;
+}
+
+li.note .avatar_frame::after {
+  position: absolute;
+  bottom: -3px;
+  right: -3px;
+
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: 2px;
+  border-radius: 100%;
+
+  color: white;
+  font-family: "optica-icons";
+  font-size: 10px;
+  font-weight: normal;
+  line-height: 1;
+}
+
+li.note.like .avatar_frame::after { content: "\EA05"; background-color: #ff492f }
+li.note.reblog .avatar_frame::after { content: "\EA08"; background-color: #00cf35; }
+li.note.reply .avatar_frame::after { content: "\EA0A"; background-color: #00b8ff; }
+li.note.original_post .avatar_frame::after { display: none; }
+
 li.note .avatar_frame,
 li.note > .avatar {
   vertical-align: middle;
