--- a/Vision Core.css
+++ b/Vision Core.css
@@ -455,6 +455,8 @@ article header a {
   font-weight: bold;
   text-decoration: none;
   white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .post-author-portrait {
