change how notes container height is calculated
the entire notes container now has an absolute maximum of 918 pixels;
this is based off Tumblr's max height for note containers,
which is to say 1.7x its width (540 * 1.7 = 918)

however, using the min() CSS function, the notes container will also
never grow past the viewport height either (and will always leave some
space around itself)

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -1004,6 +1004,9 @@ article footer a {
 /* Notes */
 
 #notes {
+  display: flex;
+  flex-direction: column;
+  max-height: min(918px, calc(100vh - (var(--post-margin) * 2)));
   overflow: hidden;
   border-radius: 3px;
   margin-top: var(--post-margin);
@@ -1014,6 +1017,7 @@ article footer a {
 }
 
 #notes > h3 {
+  flex-shrink: 0;
   padding: var(--post-vertical-spacing) var(--post-padding);
   border-bottom: 1px solid rgba(var(--title), .13);
   margin: 0;
@@ -1023,23 +1027,20 @@ article footer a {
   text-align: center;
 }
 
-#notes-scroller {
-  overflow: auto;
-  max-height: 75vh;
+ol.notes {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: stretch;
+  flex: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0.5ch 0;
+  margin: 0;
 
   background-color: rgba(var(--title), .07);
   color: rgba(var(--title), 0.65);
   scrollbar-width: thin;
   scrollbar-color: rgba(var(--title),.4) rgba(var(--background),.1);
-}
-
-ol.notes {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: stretch;
-  padding: 0.5ch 0;
-  margin: 0;
-
   font-size: .875rem;
   list-style-type: none;
 }
