improve scrollbars on pre elements
- make scrollbar invisible on non-scrollable elements
- make scrollbar less invasive on scrollable elements

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -54,6 +54,8 @@ pre {
 
   background-color: rgba(var(--title), 0.1);
   line-height: normal;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(var(--title), 0.4) transparent;
 }
 
 hr {
