--- a/Vision Core.css
+++ b/Vision Core.css
@@ -214,8 +214,7 @@ aside > section {
   background-image: linear-gradient(180deg, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, rgba(0, 0, 0, .3) 0, transparent);
 }
 
-#search[hidden],
-body.tmblr-iframe-pushdown #search {
+#search[hidden] {
   visibility: hidden;
 }
 
