--- a/Vision Core.css
+++ b/Vision Core.css
@@ -90,6 +90,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  min-height: 100vh;
 
   margin: auto;
 }
@@ -105,7 +106,9 @@ aside {
 
 aside.secondary {
   position: static;
+  align-self: stretch;
 
+  padding-bottom: 0;
   margin-left: 0;
   margin-right: var(--post-margin);
 }
@@ -1317,34 +1320,30 @@ aside.secondary > section > ul a[target="_blank"]::after {
   margin-right: 0;
 }
 
-/* Credit link */
+/* Credit links */
 
 #credit {
-  position: fixed;
-  right: 5px;
-  bottom: 5px;
+  position: sticky;
+  top: calc(100vh - var(--post-vertical-spacing));
+  transform: translateY(-100%);
 
   display: flex;
   flex-direction: row;
-  align-items: center;
-  padding: 1ch;
-  border-radius: calc(1em + 2ch);
+  flex-wrap: wrap;
+  gap: 1ch;
+  padding-bottom: 0;
+  margin-top: calc(var(--post-margin) + 1.5em + var(--post-vertical-spacing));
 
-  line-height: 1;
+  color: rgba(var(--title), 0.65);
+  font-size: .78125rem;
 }
 
-#credit:hover,
-#credit:focus {
-  background-color: rgb(var(--background));
+#credit a {
+  padding: 0 1ex;
+  color: inherit;
 }
 
-#credit span {
-  margin-left: 0.5ch;
-  margin-right: 1ch;
-
-  font-weight: bold;
-}
-
-#credit:not(:hover):not(:focus) span {
-  display: none;
+#credit a:hover,
+#credit a:focus {
+  text-decoration: underline;
 }
