--- a/Vision Core.css
+++ b/Vision Core.css
@@ -1330,16 +1330,17 @@ aside.secondary > section > ul a[target="_blank"]::after {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 1ch;
+  gap: 1ex 1em;
   padding-bottom: 0;
   margin-top: calc(var(--post-margin) + 1.5em + var(--post-vertical-spacing));
+  margin-left: .625rem;
+  margin-right: .625rem;
 
   color: rgba(var(--title), 0.65);
   font-size: .78125rem;
 }
 
 #credit a {
-  padding: 0 1ex;
   color: inherit;
 }
 
